# deep-learning-6

./: .gitignore  main.py  pyproject.toml  requirements.txt
ch01/: 01_char_tokenizer.py  02_byte_tokenizer.py  03_bpe_train.py  04_bpe_tokenizer.py  05_special_token.py  06_pretokenizer.py  07_tiny_codes.py  08_eval.py  09_bpe_encode.py
ch02/: 01_soft_dict.py  02_attn_math.py  03_attn_scaling.py  06_attn_mask.py  07_attn_value.py  08_multi_head.py  09_norm_gelu.py  10_gpt2.py
ch03/: 01_pretrain.ipynb  02_generate.ipynb  03_alpaca.ipynb  03_sft.ipynb  04_chat.ipynb  09_grpo.ipynb
ch04/: 01_bpe_optimize.ipynb  02_bpe_cache.ipynb  03_bpe_chunk.ipynb  04_bpe_parallel.ipynb  06_encode_optimize.ipynb  async_test.py
codebot/: model.py  tokenizer.py  utils.py
storybot/: download.sh  tokenizer.py
