[project]
name = "dlfs6"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "regex>=2023.0.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
full = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]